[package]
authors = ["carlos alejandro gutierrez sandoval <calgusa@gmail.com>"]
edition = "2018"
name = "mass_bench"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "*"
csv = "*"
flate2 = "*"
itertools = "*"
mass = {path = "../mass"}
tar = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
harness = false
name = "mass"

[profile.test]
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
rpath = false

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
rpath = false
